# Handwriting-Research-

./: README.md  Untitled9.ipynb  pyproject.toml  requirements.txt
src/handwriting_research/: __init__.py  data.py  feature_extraction.py  features.py  infer.py  interpretation.py  model.py  models.py  pipeline.py  train.py  training.py
src/handwriting_research.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
