[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting-research"
version = "0.1.0"
description = "Multi-modal handwriting feature extraction and deep learning toolkit"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
